# midas

./: .env.example  .gitignore  AGENTS.md  BACKTEST_TUNING_01.md  ENGINE.md  Makefile  OPENAI_HANDOFF.md  PARITY_CHECK.md  PLAN.md  README.md  bactest.md  base.py  circuit_breaker.py  classifier.py  data-cleanup.md  health_check.py  openai-regime.md  pessimistic-simulation.md  pyproject.toml  schemas.py  settings.yaml  usage.md
config/: settings.yaml  vectorbt_parameter_sets.yaml
config/cron/: daily_maintenance.crontab.example
data/curated_cache/: curation_version.json  metadata.json
docs/: FINDINGS.md  FULL_SYSTEM_SPEC.md  PAPER.md
frontend/: regime-dashboard.jsx  regime-dashboard.md
scripts/: analyze_trade_profit_path.py  build_fii_cache.py  cleanup_curated_data.py  daily_maintenance.py  data_quality_report.py  download_fii_dii.py  download_historical.py  health_check.py  kite_auth.py  kite_bootstrap.py  kite_ws_stream.py  paper_fills_report.py  paper_ops_runbook.py  regime_transition_report.py  regime_visual_review.py  replay_regime.py  run_backtest.py  run_paper.py  run_vectorbt_parameter_sets.py  run_vectorbt_research.py  strategy_results_dashboard.py  update_fii_daily.py  vectorbt_paramsets_dashboard.py
src/backtest/: __init__.py  engine.py  fee_profiles.py  hybrid.py  metrics.py  promotion_gate.py  report.py  simulator.py  vectorbt_dashboard_data.py  vectorbt_parameter_sets.py  vectorbt_research.py  vectorbt_trade_attribution.py  walkforward.py
src/data/: __init__.py  calendar.py  candle_access.py  cleanup.py  contracts.py  feed.py  fii.py  fii_signal.py  free_feed.py  kite_feed.py  nse_fo_bhavcopy.py  option_chain_quality.py  option_symbols.py  quality.py  schemas.py  store.py  truedata_feed.py
src/execution/: __init__.py  paper_executor.py
src/ops/: __init__.py  gates.py
src/regime/: __init__.py  classifier.py  persistence.py  replay.py  reporting.py  runtime.py
src/risk/: circuit_breaker.py
src/signals/: __init__.py  composite.py  contracts.py  greeks.py  mean_reversion.py  option_chain_features.py  options_signals.py  pipeline.py  regime.py  regime_filters.py  trend.py  volatility.py  volume_flow.py
src/strategies/: __init__.py  base.py  baseline_trend.py  iron_condor.py  jade_lizard.py  momentum.py  regime_probe.py  router.py
tests/test_backtest/: test_engine.py  test_fee_profiles.py  test_metrics.py  test_promotion_gate.py  test_report.py  test_simulator.py  test_vectorbt_dashboard_data.py  test_vectorbt_parameter_sets.py  test_vectorbt_research.py  test_vectorbt_trade_attribution.py  test_walkforward.py
tests/test_data/: test_cleanup.py  test_contracts.py  test_fii_quality.py  test_fii_signal.py  test_nse_fo_bhavcopy.py  test_option_chain_quality.py  test_option_symbols.py  test_quality_thresholds.py  test_store.py
tests/test_execution/: test_paper_executor.py  test_paper_fills_report.py
tests/test_ops/: test_gates.py
tests/test_regime/: test_classifier.py  test_persistence.py  test_replay.py  test_reporting.py  test_runtime.py
tests/test_risk/: test_circuit_breaker.py
tests/test_scripts/: test_regime_visual_review.py  test_run_paper.py
tests/test_signals/: test_greeks.py  test_option_chain_features.py  test_options_iv_surface.py  test_pipeline.py  test_signal_contracts.py  test_signals_core.py
tests/test_strategies/: test_baseline_trend.py  test_iron_condor.py  test_jade_lizard.py  test_momentum.py  test_router.py
